# did-it-run

./: .codecov.yml  .gitignore  .travis.yml  CONTRIBUTORS  Cargo.toml  Dockerfile  README.md  beautify.sh  check-style.sh  run-test-scripts.sh  rustfmt.toml  test.sh
.build/: azure-pipelines.yml
.build-scripts/: codecov.sh
.build/templates/: install-common.yml
.diditrun/: config.toml  credentials.toml
.github/: CODEOWNERS  dependabot.yml
common/: Cargo.toml
common/src/: lib.rs  oauth.rs
common/src/api/user/: emails.rs  mod.rs
did_it_run/: Cargo.toml  Dockerfile
did_it_run/src/: cli.rs  config.rs  duration_format.rs  email.rs  exit_code.rs  incantation.rs  lib.rs  main.rs
did_it_run/src/cli/: mod.rs
did_it_run/src/notifications/: desktop.rs  email.rs  mod.rs  notification_info.rs
did_it_run/tests/: common.rs  integration_tests.rs  lib_tests.rs
did_it_run/tests/fixtures/: exit-with-argument-count.sh
tests/: exits-with-child-status_test.sh  exits-with-no-arguments_test.sh  runs-command-with-no-arguments_test.sh  runs-command-with-one-argument_test.sh  runs-command-with-several-arguments_test.sh
tests/fixtures/: exit-with-code.sh
tests/fixtures/diditrun/: config.toml  credentials.toml  default-config.toml  default-credentials.toml  malformed-config.toml  malformed-credentials.toml  missing-credentials.toml
tests/fixtures/tls/: csr.conf  install-cert.sh  make-cert.sh
