[package]
name = "did_it_run"
version = "0.0.1"
readme = "README.md"
homepage = "https://www.didit.run"
repository = "https://github.com/lelandjansen/did-it-run"
license = "Apache-2.0"
authors = ["Leland Jansen <hello@lelandjansen.com>"]

[dependencies]
clap = "~2.32.0"
dirs = "~1.0.5"
lazy_static = "~1.3.0"
native-tls = "^0.2" # Match lettre dependency
semver = "~0.9.0"
serde = "~1.0.89"
serde_derive = "~1.0.89"
toml = "~0.5.0"

# TODO(#19): lettre = "~0.9.1"
[dependencies.lettre]
git = "https://github.com/lettre/lettre/"
rev = "8f1c9dbec525be0ececfdffe2c43d41b467eacfa"

# TODO(#19): lettre_email = "~0.9.1"
[dependencies.lettre_email]
git = "https://github.com/lettre/lettre/"
rev = "8f1c9dbec525be0ececfdffe2c43d41b467eacfa"


[dev-dependencies]
matches = "~0.1.8"
mailin-embedded = "~0.4.1"
mailparse = "~0.6.5"

[[bin]]
name = "diditrun"
path = "src/main.rs"
